@@ -1,5 +1,11 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.605 2006/04/20 01:33:12 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.606 2006/04/20 15:17:01 wolf31o2 Exp $
+
+  20 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
+  targets/livecd-stage2/livecd-stage2-controller.sh,
+  targets/support/bootloader-setup.sh:
+  I missed an extra else in bootloader-setup.sh, so I'm fixing that and
+  rolling out an emergency rc44.
 
   20 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>
   targets/support/bootloader-setup.sh:
